--- a/KuranX.App/Core/ResourceXaml/verseDesing.xaml
+++ b/KuranX.App/Core/ResourceXaml/verseDesing.xaml
@@ -18,7 +18,7 @@
 
         <Setter Property="Height" Value="80" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="25,0,25,0" />
+        <Setter Property="Margin" Value="5 0 5 0" />
 
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
@@ -32,6 +32,20 @@
                 </Trigger.EnterActions>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+
+    <Style x:Key="sectionDetail" TargetType="TextBlock">
+
+        <Setter Property="Margin" Value="15 5 30 5" />
+        <Setter Property="Height" Value="Auto"/>
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{DynamicResource Base.Text.Content}" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsRegular}" />
+
     </Style>
 
     <!-- Border -->
@@ -241,6 +255,50 @@
                             <Setter TargetName="ic_temp" Property="Foreground" Value="#FFFFFF" />
                             <Setter TargetName="txt_temp" Property="Foreground" Value="#FFFFFF" />
                             <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="vrs_ClassButton" TargetType="Button" BasedOn="{StaticResource vrs_ActionMainTabButton}">
+        <Setter Property="Margin" Value="10 5 10 5" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="bg_temp" Padding="20,5,20,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <TextBlock x:Name="txt_temp" FontWeight="Bold" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="{TemplateBinding FontSize}" FontFamily="{DynamicResource PoppinsSemiBold}" Foreground="{TemplateBinding Foreground}" />
+                        </StackPanel>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="True">
+                            <Setter TargetName="bg_temp" Property="Background" Value="#1C1E2F" />
+                            <Setter TargetName="txt_temp" Property="Foreground" Value="#FFF" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="vrs_ClassButtonAc" TargetType="Button" BasedOn="{StaticResource vrs_ActionMainTabButton}">
+        <Setter Property="Margin" Value="10 5 10 5" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border x:Name="bg_temp" Padding="20,5,20,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="{TemplateBinding Background}">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <TextBlock x:Name="txt_temp" FontWeight="Bold" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontSize="{TemplateBinding FontSize}" FontFamily="{DynamicResource PoppinsSemiBold}" Foreground="{TemplateBinding Foreground}" />
+                        </StackPanel>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="True">
+                            <Setter TargetName="bg_temp" Property="Background" Value="#F0433A" />
+                            <Setter TargetName="txt_temp" Property="Foreground" Value="#FFF" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -596,6 +654,54 @@
                         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
                             <TextBlock x:Name="target2" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontFamily="{DynamicResource PoppinsMedium}" Foreground="{TemplateBinding Foreground}" />
                             <TextBlock x:Name="target3" Text=" Ayet" FontFamily="{DynamicResource PoppinsMedium}" Foreground="{TemplateBinding Foreground}" />
+                        </StackPanel>
+                    </Border>
+                    <ControlTemplate.Triggers>
+
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="target1" Property="Background" Value="#66E21F" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter TargetName="target1" Property="Background" Value="#FFFFFF" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#1C1E2F" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#1C1E2F" />
+                        </Trigger>
+
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="target1" Property="Background" Value="#F0433A" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="target1" Property="Background" Value="#F0433A" />
+                            <Setter TargetName="target2" Property="Foreground" Value="#FFFFFF" />
+                            <Setter TargetName="target3" Property="Foreground" Value="#FFFFFF" />
+                            <Setter Property="Cursor" Value="Hand" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+    <Style x:Key="vrs_NavButtonS" TargetType="CheckBox" BasedOn="{StaticResource vrs_ActionMainBottomButton}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
+        <Setter Property="Background" Value="#F0433A" />
+        <Setter Property="Foreground"  Value="#FFFFFF" />
+        <Setter Property="Height" Value="30" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type CheckBox}">
+                    <Border x:Name="target1" Padding="25,5,25,5" Style="{DynamicResource defaultBorderShadowEffect}" Background="{Binding Path=Tag,RelativeSource={RelativeSource TemplatedParent}}" SnapsToDevicePixels="True" UseLayoutRounding="True">
+                        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Horizontal">
+                            <TextBlock x:Name="target2" Text="{Binding Path=Content, RelativeSource={RelativeSource TemplatedParent}}" FontFamily="{DynamicResource PoppinsMedium}" Foreground="{TemplateBinding Foreground}" />
+                            <TextBlock x:Name="target3" Text=" Bölüm" FontFamily="{DynamicResource PoppinsMedium}" Foreground="{TemplateBinding Foreground}" />
                         </StackPanel>
                     </Border>
                     <ControlTemplate.Triggers>
