--- a/KuranX.App/Core/Pages/AdminF/dataTransferPage.xaml
+++ b/KuranX.App/Core/Pages/AdminF/dataTransferPage.xaml
@@ -25,12 +25,15 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        
+        <Button x:Name="addsection" Content="Add Section" Tag="12" Grid.Column="0" Style="{DynamicResource admin_Menubtn}" Click="addSection_Click" />
 
         <Button x:Name="addsure" Content="Add Sure" Tag="12" Grid.Column="1" Style="{DynamicResource admin_Menubtn}" Click="addsure_Click" />
         <Button x:Name="addverse" Content="Add Verse" Tag="12" Grid.Column="2" Style="{DynamicResource admin_Menubtn}" Click="addverse_Click" />
         <Button x:Name="addwords" Content="Add Word" Tag="12" Grid.Column="3" Style="{DynamicResource admin_Menubtn}" Click="addwords_Click" />
         <Button x:Name="addInterpreter" Content="Add Interpreter" Tag="12" Grid.Column="4" Style="{DynamicResource admin_Menubtn}" Click="addInterpreter_Click" />
         <Button x:Name="resultCreate" Content="Result Create" Tag="12" Grid.Column="5" Style="{DynamicResource admin_Menubtn}" />
+        <Button x:Name="verseClassCreate" Content="Result Create" Tag="12" Grid.Column="6" Style="{DynamicResource admin_Menubtn}" Click="verseClassCreate_Click" />
 
         <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7" Padding="20" UseLayoutRounding="True" SnapsToDevicePixels="True">
             <Border Style="{DynamicResource defaultBorderShadowEffect}">
